Fixed sources to make checkstyle and IntelliJ Inspections happy